--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -7,7 +7,8 @@
     "build": "mpx-cli-service build:mp",
     "lint": "eslint --ext .js,.ts,.mpx src/",
     "build:web": "mpx-cli-service build:web",
-    "serve:web": "mpx-cli-service serve:web"
+    "serve:web": "mpx-cli-service serve:web",
+    "open": "weapp open -p dist/wx"
   },
   "dependencies": {
     "@mpxjs/api-proxy": "^2.8.0",
@@ -40,12 +41,17 @@
     "@mpxjs/webpack-plugin": "^2.8.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.2.4",
-    "eslint": "^7.0.0",
+    "eslint": "^8.29.0",
     "postcss": "^8.2.6",
-    "stylus": "^0.55.0",
-    "stylus-loader": "^6.1.0",
+    "postcss-loader": "^7.0.2",
+    "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
+    "weapp-ide-cli": "^1.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.12.6",
     "webpack": "^5.43.0"
   },
   "browserslist": "ios >= 8, chrome >= 47"
