--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -50,26 +50,30 @@
     "open:build": "weapp open -p dist/build/mp-weixin"
   },
   "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.1-36420220922003",
-    "@dcloudio/uni-h5": "^2.0.1-36420220922003",
+    "@dcloudio/uni-app": "2.0.2-3061320221209001",
+    "@dcloudio/uni-app-plus": "2.0.2-3061320221209001",
+    "@dcloudio/uni-h5": "2.0.2-3061320221209001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-360": "^2.0.1-alpha-36420220922001",
-    "@dcloudio/uni-mp-alipay": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-baidu": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-jd": "^2.0.1-36420220922001",
-    "@dcloudio/uni-mp-kuaishou": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-lark": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-qq": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-toutiao": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-vue": "^2.0.1-36420220922003",
-    "@dcloudio/uni-mp-weixin": "^2.0.1-36420220922003",
-    "@dcloudio/uni-quickapp-native": "^2.0.1-36420220922001",
-    "@dcloudio/uni-quickapp-webview": "^2.0.1-36420220922003",
-    "@dcloudio/uni-stat": "^2.0.1-36420220922003",
+    "@dcloudio/uni-i18n": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-360": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-jd": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-lark": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-qq": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-vue": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-3061320221209001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-3061320221209001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-3061320221209001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-3061320221209001",
+    "@dcloudio/uni-stacktracey": "2.0.2-3061320221209001",
+    "@dcloudio/uni-stat": "2.0.2-3061320221209001",
     "@vant/weapp": "^1.10.5",
-    "@vue/shared": "^3.2.41",
+    "@vue/shared": "^3.0.0",
     "core-js": "^3.25.5",
+    "flyio": "^0.6.2",
     "regenerator-runtime": "^0.13.10",
     "uview-ui": "2.0.34",
     "vue": "^2.6.11",
@@ -79,16 +83,16 @@
     "@babel/plugin-syntax-typescript": "^7.18.6",
     "@babel/runtime": "~7.19.4",
     "@dcloudio/types": "*",
-    "@dcloudio/uni-automator": "^2.0.1-36420220922003",
-    "@dcloudio/uni-cli-i18n": "^2.0.1-alpha-36420220922001",
-    "@dcloudio/uni-cli-shared": "^2.0.1-36420220922003",
-    "@dcloudio/uni-migration": "^2.0.1-36420220922001",
-    "@dcloudio/uni-template-compiler": "^2.0.1-36420220922001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.1-36420220922001",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.1-36420220922003",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.1-36420220922001",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.1-36420220922001",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.1-36420220922001",
+    "@dcloudio/uni-automator": "2.0.2-3061320221209001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-3061320221209001",
+    "@dcloudio/uni-cli-shared": "2.0.2-3061320221209001",
+    "@dcloudio/uni-migration": "2.0.2-3061320221209001",
+    "@dcloudio/uni-template-compiler": "2.0.2-3061320221209001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-3061320221209001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-3061320221209001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-3061320221209001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-3061320221209001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-3061320221209001",
     "@types/tailwindcss": "^3.1.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-typescript": "^4.5.17",
@@ -96,7 +100,7 @@
     "autoprefixer": "9",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "jest": "^29.2.0",
+    "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "3.6.0",
     "postcss": "7",
