--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -75,7 +75,7 @@
     "typescript": "~4.9.4",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.7-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.12.7",
     "webpack": "^5.75.0"
   },
   "engines": {
