--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.12.7",
+  "version": "1.12.8-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -112,7 +112,7 @@
     "@icebreakers/eslint-config-ts": "^1.0.2",
     "@icebreakers/readme": "^0.0.1",
     "@rollup/plugin-alias": "^4.0.2",
-    "@rollup/plugin-commonjs": "^23.0.4",
+    "@rollup/plugin-commonjs": "^23.0.5",
     "@rollup/plugin-json": "^5.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.2.0",
@@ -127,7 +127,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/memory-fs": "^0.3.3",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^18.11.15",
+    "@types/node": "^18.11.16",
     "@types/object-hash": "^3.0.1",
     "@types/semver": "^7.3.13",
     "@types/webpack": "^5.28.0",
@@ -137,11 +137,11 @@
     "babel-loader": "^8.2.5",
     "chalk": "4.1.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.2",
+    "css-loader": "^6.7.3",
     "css-loader3": "npm:css-loader@3.6.0",
     "defu": "6.1.1",
     "del": "^6.1.1",
-    "eslint": "8.29.0",
+    "eslint": "8.30.0",
     "esm": "^3.2.25",
     "execa": "5",
     "fast-glob": "^3.2.12",
