--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -39,7 +39,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^1.12.8"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
