Squashed commit of the following:
commit 9ebf44d074cbb6fc275fa25899942ea9e11cb48b
Merge: 32a8736 dcaf725
Author: SonOfMagic <qq1324318532@gmail.com>
Date:   Tue Dec 20 09:46:47 2022 +0800

    Merge branch 'dev' into feature/mpx-demo

commit 32a8736703047802d328af087caca6fbd7d0ab0c
Author: SonOfMagic <qq1324318532@gmail.com>
Date:   Tue Dec 20 09:34:20 2022 +0800

    feat: commit mpx demo

commit 163215973a1ef86d0e33ecfc7b8b75caa7ff69d5
Author: SonOfMagic <qq1324318532@gmail.com>
Date:   Tue Dec 13 18:07:13 2022 +0800

    doc: commit mpx-app readme

commit 4e9ac6e576e6c6fd39bada1e91985c4f9dee3fb7
Author: SonOfMagic <qq1324318532@gmail.com>
Date:   Tue Dec 13 14:19:08 2022 +0800

    chore: demo commit

commit a0fd9db09aeb604e4309c7846a3eae8cf719751e
Author: SonOfMagic <qq1324318532@gmail.com>
Date:   Tue Dec 13 13:48:11 2022 +0800

    chore: remove some wxml comment

commit dcbc2a7109c7b8fa38327931c26341dc8d41d507
Author: SonOfMagic <qq1324318532@gmail.com>
Date:   Tue Dec 13 13:20:55 2022 +0800

    chore: add mpx doc

commit 1d3d6f92d1678080549f05441a627e3642e6bbc1
Author: SonOfMagic <qq1324318532@gmail.com>
Date:   Tue Dec 13 11:24:18 2022 +0800

    feat: commit mpx test but hmr fail

commit 53a90e36711902f7e00918289e39d5a8354f51f9
Author: sonofmagic <1324318532@qq.com>
Date:   Tue Dec 13 00:05:20 2022 +0800

    fix: mpx root eslint config

commit c8b77b72046123135fc173ca0d1d61b2474204d4
Author: sonofmagic <1324318532@qq.com>
Date:   Tue Dec 13 00:01:52 2022 +0800

    feat: recreate mpx app

--- a/demo/mpx-app/static/wx/project.config.json
+++ b/demo/mpx-app/static/wx/project.config.json
@@ -1,16 +1,30 @@
 {
-  "compileType": "miniprogram",
   "setting": {
     "newFeature": true,
     "urlCheck": true,
     "es6": false,
-    "postcss": false,
+    "postcss": true,
     "minified": false,
     "checkSiteMap": false,
-    "autoAudits": false
+    "autoAudits": false,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
+    }
   },
-  "appid": "wxb3d842a4a7e3440d",
+  "appid": "touristappid",
   "projectname": "mpx-app",
   "description": "A mpx project",
-  "condition": {}
+  "condition": {},
+  "compileType": "miniprogram",
+  "libVersion": "2.25.2",
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "editorSetting": {
+    "tabIndent": "insertSpaces",
+    "tabSize": 2
+  }
 }
