chore(demo): upgrade deps

--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -38,32 +38,32 @@
     "open:build": "weapp open -p dist/build/mp-weixin"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060920221114001",
+    "@dcloudio/uni-app": "3.0.0-3061420221215001",
+    "@dcloudio/uni-app-plus": "3.0.0-3061420221215001",
+    "@dcloudio/uni-components": "3.0.0-3061420221215001",
+    "@dcloudio/uni-h5": "3.0.0-3061420221215001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3061420221215001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3061420221215001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3061420221215001",
+    "@dcloudio/uni-mp-lark": "3.0.0-3061420221215001",
+    "@dcloudio/uni-mp-qq": "3.0.0-3061420221215001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3061420221215001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3061420221215001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3061420221215001",
     "eventemitter3": "^4.0.7",
     "miniprogram-computed": "^4.4.0",
     "p-queue": "6.6.2",
     "vk-uview-ui": "^1.4.0",
-    "vue": "^3.2.41",
+    "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.0.16",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3060920221114001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060920221114001",
+    "@dcloudio/types": "^3.0.17",
+    "@dcloudio/uni-automator": "3.0.0-3061420221215001",
+    "@dcloudio/uni-cli-shared": "3.0.0-3061420221215001",
+    "@dcloudio/uni-stacktracey": "3.0.0-3061420221215001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3061420221215001",
     "autoprefixer": "^10.4.13",
     "miniprogram-api-typings": "^3.6.0",
     "postcss": "^8.4.18",
@@ -76,7 +76,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.6.0",
     "unocss": "^0.46.4",
-    "vite": "^3.1.8",
+    "vite": "^3.2.4",
     "vite-plugin-windicss": "^1.8.8",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
