--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -50,9 +50,12 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3061420221215001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3061420221215001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3061420221215001",
+    "clipboard": "^2.0.11",
+    "dayjs": "^1.11.7",
     "eventemitter3": "^4.0.7",
     "miniprogram-computed": "^4.4.0",
     "p-queue": "6.6.2",
+    "uview-plus": "^3.1.20",
     "vk-uview-ui": "^1.4.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
