--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/memory-fs": "^0.3.3",
     "@types/micromatch": "^4.0.2",
-    "@types/node": "^18.14.1",
+    "@types/node": "^18.14.2",
     "@types/object-hash": "^3.0.2",
     "@types/semver": "^7.3.13",
     "@types/webpack": "^5.28.0",
@@ -141,7 +141,7 @@
     "css-loader3": "npm:css-loader@3.6.0",
     "defu": "6.1.2",
     "del": "^6.1.1",
-    "eslint": "8.34.0",
+    "eslint": "8.35.0",
     "esm": "^3.2.25",
     "execa": "5",
     "fast-glob": "^3.2.12",
@@ -165,7 +165,7 @@
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.17.2",
+    "rollup": "^3.17.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.1",
@@ -194,6 +194,7 @@
     "postcss": "8.4.21",
     "postcss-selector-parser": "^6.0.11",
     "semver": "^7.3.8",
+    "unplugin": "^1.1.0",
     "webpack-sources": "^3.2.3"
   }
 }
