--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -38,18 +38,18 @@
     "open:build": "weapp open -p dist/build/mp-weixin"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3061420221215001",
-    "@dcloudio/uni-app-plus": "3.0.0-3061420221215001",
-    "@dcloudio/uni-components": "3.0.0-3061420221215001",
-    "@dcloudio/uni-h5": "3.0.0-3061420221215001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3061420221215001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3061420221215001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3061420221215001",
-    "@dcloudio/uni-mp-lark": "3.0.0-3061420221215001",
-    "@dcloudio/uni-mp-qq": "3.0.0-3061420221215001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3061420221215001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3061420221215001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3061420221215001",
+    "@dcloudio/uni-app": "3.0.0-3070320230222002",
+    "@dcloudio/uni-app-plus": "3.0.0-3070320230222002",
+    "@dcloudio/uni-components": "3.0.0-3070320230222002",
+    "@dcloudio/uni-h5": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-lark": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-qq": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3070320230222002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3070320230222002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3070320230222002",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.7",
     "eventemitter3": "^4.0.7",
@@ -62,11 +62,11 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.0.17",
-    "@dcloudio/uni-automator": "3.0.0-3061420221215001",
-    "@dcloudio/uni-cli-shared": "3.0.0-3061420221215001",
-    "@dcloudio/uni-stacktracey": "3.0.0-3061420221215001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3061420221215001",
+    "@dcloudio/types": "^3.2.7",
+    "@dcloudio/uni-automator": "3.0.0-3070320230222002",
+    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
+    "@dcloudio/uni-stacktracey": "3.0.0-3070320230222002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3070320230222002",
     "autoprefixer": "^10.4.13",
     "miniprogram-api-typings": "^3.6.0",
     "postcss": "^8.4.18",
@@ -79,7 +79,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.6.0",
     "unocss": "^0.46.4",
-    "vite": "^3.2.4",
+    "vite": "4.0.3",
     "vite-plugin-windicss": "^1.8.8",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
