--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "npm run dev:h5",
     "dev": "npm run dev:mp-weixin",
+    "dev:local": "cross-env LOCAL=1 NODE_ENV=development UNI_PLATFORM=mp-weixin vue-cli-service uni-build --watch",
     "build": "npm run build:mp-weixin",
     "build:local": "cross-env LOCAL=1 npm run build:mp-weixin",
     "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
