--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "dev": "yarn clean && yarn dts && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
     "build": "yarn clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && yarn dts && yarn fix-dts",
+    "build:demo": "yarn demo:del-dist && cross-env NODE_ENV=demo rollup -c rollup.config.ts --configPlugin typescript && yarn demo:sync-dist",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
     "fix-dts": "ts-node scripts/fix-dts.ts",
@@ -45,6 +46,8 @@
     "demo:install:beta": "node scripts/demo/install.js --beta",
     "demo:remove-deps": "node scripts/demo/del.js",
     "demo:remove-test-coms": "node scripts/demo/remove-test-coms.js",
+    "demo:sync-dist": "node scripts/demo/copy-dist.js",
+    "demo:del-dist": "node scripts/demo/del-dist.js",
     "sync": "open-cli https://npmmirror.com/sync/weapp-tailwindcss-webpack-plugin",
     "generate:readme": "ts-node scripts/readme/write.ts",
     "format": "prettier --check \"src/**/*.{ts,js}\" -w",
@@ -119,6 +122,7 @@
     "@types/babel__generator": "^7.6.4",
     "@types/babel__traverse": "^7.18.3",
     "@types/esm": "^3.2.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.4.2",
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.191",
@@ -143,6 +147,7 @@
     "esm": "^3.2.25",
     "execa": "5",
     "fast-glob": "^3.2.12",
+    "fs-extra": "^11.1.0",
     "html-loader": "^4.2.0",
     "html-loader1": "npm:html-loader@1.3.2",
     "jest": "^29.5.0",
