--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -38,6 +38,7 @@
     "open:build": "weapp open -p dist/build/mp-weixin"
   },
   "dependencies": {
+    "@babel/types": "^7.21.3",
     "@dcloudio/uni-app": "3.0.0-3070320230222002",
     "@dcloudio/uni-app-plus": "3.0.0-3070320230222002",
     "@dcloudio/uni-components": "3.0.0-3070320230222002",
@@ -55,9 +56,9 @@
     "eventemitter3": "^4.0.7",
     "miniprogram-computed": "^4.4.0",
     "p-queue": "6.6.2",
-    "uview-plus": "^3.1.20",
-    "vk-uview-ui": "^1.4.0",
-    "vue": "^3.2.45",
+    "uview-plus": "^3.1.29",
+    "vk-uview-ui": "^1.4.4",
+    "vue": "^3.2.47",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.1.0"
   },
@@ -67,21 +68,21 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
     "@dcloudio/uni-stacktracey": "3.0.0-3070320230222002",
     "@dcloudio/vite-plugin-uni": "3.0.0-3070320230222002",
-    "autoprefixer": "^10.4.13",
-    "miniprogram-api-typings": "^3.6.0",
-    "postcss": "^8.4.18",
+    "autoprefixer": "^10.4.14",
+    "miniprogram-api-typings": "^3.9.0",
+    "postcss": "^8.4.21",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "postcss-windicss": "^1.0.0",
-    "sass": "^1.56.1",
+    "sass": "^1.59.3",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.2",
+    "tailwindcss": "^3.2.7",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~4.6.0",
-    "unocss": "^0.46.4",
-    "vite": "4.0.3",
-    "vite-plugin-windicss": "^1.8.8",
-    "weapp-ide-cli": "^1.0.0",
+    "typescript": "~4.9.5",
+    "unocss": "^0.50.4",
+    "vite": "4.1.4",
+    "vite-plugin-windicss": "^1.8.10",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^1.12.8",
     "windicss": "^3.5.6"
