--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -45,13 +45,17 @@
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.2.7",
+    "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.9.5",
     "vue-template-compiler": "^2.6.14",
-    "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8",
+    "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3",
     "webpack": "^5.76.1"
   },
   "browserslist": "ios >= 8, chrome >= 47"
