--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -65,9 +65,9 @@
     "tailwindcss": "^3.2.7",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.9.5",
-    "weapp-ide-cli": "^1.0.0",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-sources": "^3.2.3"
