--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -37,9 +37,9 @@
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.2.7",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "weapp-ide-cli": "^1.0.0",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
