--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -73,9 +73,9 @@
     "tailwindcss": "^3.2.7",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
-    "weapp-ide-cli": "^1.0.0",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3",
     "webpack": "^5.76.1"
   },
   "engines": {
