--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -74,9 +74,9 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "vue-loader": "^17.0.1",
-    "weapp-ide-cli": "^1.0.0",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3",
     "webpack": "^5.76.1"
   }
 }
