--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -79,12 +79,12 @@
     "tailwindcss": "^3.2.7",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
-    "unocss": "^0.50.4",
-    "vite": "4.1.4",
+    "unocss": "^0.50.5",
+    "vite": "4.2.0",
     "vite-plugin-windicss": "^1.8.10",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3",
     "windicss": "^3.5.6"
   }
 }
