--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -114,9 +114,9 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
-    "weapp-ide-cli": "^1.0.0",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3"
   },
   "browserslist": [
     "Android >= 4.4",
