--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -116,9 +116,9 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.6.0",
     "vue-template-compiler": "^2.6.11",
-    "weapp-ide-cli": "^1.0.0",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3"
   },
   "browserslist": [
     "Android >= 4.4",
