--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -23,8 +23,8 @@
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.0.15",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "weapp-ide-cli": "^1.0.0",
+    "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.8"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.3"
   }
 }
