--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     "@babel/generator": "7.21.3",
     "@babel/parser": "7.21.3",
     "@babel/traverse": "7.21.3",
-    "@babel/types": "^7.21.3",
+    "@babel/types": "7.21.3",
     "loader-utils": "^2.0.2",
     "micromatch": "^4.0.5",
     "postcss": "8.4.21",
