--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-react": "^7.18.6",
-    "@icebreakers/cli": "0.1.0",
+    "@icebreakers/cli": "^0.1.1",
     "@icebreakers/eslint-config-ts": "^1.0.4",
     "@icebreakers/readme": "^0.0.1",
     "@rollup/plugin-alias": "^4.0.3",
