--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -41,6 +41,7 @@
     "@tarojs/react": "3.6.2",
     "@tarojs/runtime": "3.6.2",
     "@tarojs/taro": "3.6.2",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "taro-hooks": "1.5.10"
