--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -15,6 +15,7 @@
     "open": "weapp open -p build/wechat-miniprogram"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "rax": "^1.2.3",
     "rax-document": "^0.1.0",
     "rax-image": "^2.4.3",
@@ -39,7 +40,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.5"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.7"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
