feat: release beta.9

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.0.0-beta.8",
+  "version": "2.0.0-beta.9",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -111,7 +111,7 @@
     "@babel/preset-react": "^7.18.6",
     "@icebreakers/cli": "^0.1.1",
     "@icebreakers/eslint-config-ts": "^1.0.4",
-    "@icebreakers/readme": "^0.0.1",
+    "@icebreakers/readme": "0.0.1",
     "@rollup/plugin-alias": "^4.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
