--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -76,7 +76,7 @@
     "vue-loader": "^17.0.1",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.0-beta.10",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.0",
     "webpack": "^5.76.1"
   }
 }
