--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-react": "^7.18.6",
+    "@docusaurus/types": "^2.3.1",
     "@icebreakers/cli": "^0.1.1",
     "@icebreakers/eslint-config-ts": "^1.0.4",
     "@icebreakers/readme": "0.0.1",
