--- a/website/package.json
+++ b/website/package.json
@@ -15,8 +15,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
+    "@docusaurus/core": "2.4.0",
+    "@docusaurus/preset-classic": "2.4.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
@@ -24,12 +24,13 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1",
+    "@docusaurus/module-type-aliases": "2.4.0",
+    "@docusaurus/types": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "docusaurus-plugin-sass": "^0.2.3",
+    "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
-    "typescript": "^4.7.4",
-    "sass": "^1.59.3",
-    "docusaurus-plugin-sass": "^0.2.3"
+    "typescript": "^4.7.4"
   },
   "browserslist": {
     "production": [
