--- a/website/package.json
+++ b/website/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "deploy:cos": "node scripts/deployCos.js"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.0",
@@ -26,8 +27,10 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.0",
     "@docusaurus/types": "^2.4.0",
+    "@icebreakers/deploy": "^0.1.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "docusaurus-plugin-sass": "^0.2.3",
+    "dotenv": "^16.0.3",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
     "typescript": "^4.7.4"
