--- a/website/package.json
+++ b/website/package.json
@@ -29,10 +29,12 @@
     "@docusaurus/types": "^2.4.0",
     "@icebreakers/deploy": "^0.1.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "autoprefixer": "^10.4.14",
     "docusaurus-plugin-sass": "^0.2.3",
     "dotenv": "^16.0.3",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.1",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.7.4"
   },
   "browserslist": {
