chore: add metadata

--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "deploy:github": "cross-env PROVIDER=GITHUB docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
@@ -30,6 +30,7 @@
     "@icebreakers/deploy": "^0.1.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.3",
     "dotenv": "^16.0.3",
     "sass": "^1.60.0",
