chore: upgrade demo deps

--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint --ext .js,.ts,.mpx src/",
     "build:web": "mpx-cli-service build:web",
     "serve:web": "mpx-cli-service serve:web",
-    "open": "weapp open -p dist/wx"
+    "open": "weapp open -p dist/wx",
+    "postinstall": "weapp-tw patch"
   },
   "dependencies": {
     "@mpxjs/api-proxy": "^2.8.0",
@@ -49,13 +50,13 @@
     "sass": "^1.59.2",
     "sass-loader": "^13.2.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.9.5",
     "vue-template-compiler": "^2.6.14",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.2",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.3",
     "webpack": "^5.76.1"
   },
   "browserslist": "ios >= 8, chrome >= 47"
