--- a/demo/remax-app/project.config.json
+++ b/demo/remax-app/project.config.json
@@ -37,7 +37,8 @@
     "minifyWXML": true,
     "showES6CompileOption": false,
     "useCompilerPlugins": false,
-    "useStaticServer": true
+    "useStaticServer": true,
+    "condition": false
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
