--- a/demo/taro-app/project.config.json
+++ b/demo/taro-app/project.config.json
@@ -40,7 +40,8 @@
     "showES6CompileOption": false,
     "useCompilerPlugins": false,
     "ignoreUploadUnusedFiles": true,
-    "useStaticServer": true
+    "useStaticServer": true,
+    "condition": false
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
