--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -35,21 +35,23 @@
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
     "open:dev": "weapp open -p dist/dev/mp-weixin",
-    "open:build": "weapp open -p dist/build/mp-weixin"
+    "open:build": "weapp open -p dist/build/mp-weixin",
+    "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3070320230222002",
-    "@dcloudio/uni-app-plus": "3.0.0-3070320230222002",
-    "@dcloudio/uni-components": "3.0.0-3070320230222002",
-    "@dcloudio/uni-h5": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-lark": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-qq": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3070320230222002",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3070320230222002",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3070320230222002",
+    "@dcloudio/uni-app": "3.0.0-3070920230324001",
+    "@dcloudio/uni-app-plus": "3.0.0-3070920230324001",
+    "@dcloudio/uni-components": "3.0.0-3070920230324001",
+    "@dcloudio/uni-h5": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-jd": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-lark": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-qq": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3070920230324001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3070920230324001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3070920230324001",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.7",
     "eventemitter3": "^4.0.7",
@@ -57,16 +59,16 @@
     "p-queue": "6.6.2",
     "uview-plus": "^3.1.29",
     "vk-uview-ui": "^1.4.4",
-    "vue": "^3.2.47",
+    "vue": "^3.2.45",
     "vue-i18n": "^9.1.9",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.2.7",
-    "@dcloudio/uni-automator": "3.0.0-3070320230222002",
-    "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
-    "@dcloudio/uni-stacktracey": "3.0.0-3070320230222002",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3070320230222002",
+    "@dcloudio/types": "^3.3.2",
+    "@dcloudio/uni-automator": "3.0.0-3070920230324001",
+    "@dcloudio/uni-cli-shared": "3.0.0-3070920230324001",
+    "@dcloudio/uni-stacktracey": "3.0.0-3070920230324001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3070920230324001",
     "autoprefixer": "^10.4.14",
     "miniprogram-api-typings": "^3.9.0",
     "postcss": "^8.4.21",
@@ -75,15 +77,15 @@
     "postcss-windicss": "^1.0.0",
     "sass": "^1.59.3",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "unocss": "^0.50.5",
-    "vite": "4.2.0",
+    "vite": "4.1.4",
     "vite-plugin-windicss": "^1.8.10",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.2",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.3",
     "windicss": "^3.5.6"
   }
 }
