--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -19,7 +19,8 @@
     "upload:win32": "C:/Program Files (x86)/Tencent/微信web开发者工具/cli.bat -u $npm_package_version@$INIT_CWD",
     "test": "jest",
     "format": "prettier --write src/**/*.wxml",
-    "open": "weapp open -p"
+    "open": "weapp open -p",
+    "postinstall": "weapp-tw patch"
   },
   "sideEffects": false,
   "dependencies": {
@@ -27,7 +28,6 @@
     "dayjs": "^1.11.7",
     "eventemitter3": "^5.0.0",
     "lodash": "^4.17.21",
-    "p-queue": "7.3.4",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
@@ -62,12 +62,12 @@
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.9.5",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.2",
+    "weapp-tailwindcss-webpack-plugin": "^2.0.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-sources": "^3.2.3"
