--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -32,7 +32,8 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
-    "open": "weapp open -p"
+    "open": "weapp open -p",
+    "postinstall": "weapp-tw patch"
   },
   "browserslist": [
     "last 3 versions",
@@ -42,53 +43,53 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.21.0",
-    "@tarojs/components": "3.6.2",
-    "@tarojs/helper": "3.6.2",
-    "@tarojs/plugin-framework-vue2": "3.6.2",
-    "@tarojs/plugin-platform-alipay": "3.6.2",
-    "@tarojs/plugin-platform-jd": "3.6.2",
-    "@tarojs/plugin-platform-qq": "3.6.2",
-    "@tarojs/plugin-platform-swan": "3.6.2",
-    "@tarojs/plugin-platform-tt": "3.6.2",
-    "@tarojs/plugin-platform-weapp": "3.6.2",
-    "@tarojs/router": "3.6.2",
-    "@tarojs/runtime": "3.6.2",
-    "@tarojs/shared": "3.6.2",
-    "@tarojs/taro": "3.6.2",
-    "@tarojs/taro-h5": "3.6.2",
+    "@tarojs/components": "3.6.4",
+    "@tarojs/helper": "3.6.4",
+    "@tarojs/plugin-framework-vue2": "3.6.4",
+    "@tarojs/plugin-platform-alipay": "3.6.4",
+    "@tarojs/plugin-platform-jd": "3.6.4",
+    "@tarojs/plugin-platform-qq": "3.6.4",
+    "@tarojs/plugin-platform-swan": "3.6.4",
+    "@tarojs/plugin-platform-tt": "3.6.4",
+    "@tarojs/plugin-platform-weapp": "3.6.4",
+    "@tarojs/router": "3.6.4",
+    "@tarojs/runtime": "3.6.4",
+    "@tarojs/shared": "3.6.4",
+    "@tarojs/taro": "3.6.4",
+    "@tarojs/taro-h5": "3.6.4",
     "vue": "~2.6.14",
     "vue-template-compiler": "~2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@tarojs/cli": "3.6.2",
-    "@tarojs/mini-runner": "3.6.2",
-    "@tarojs/webpack-runner": "3.6.2",
-    "@tarojs/webpack5-runner": "3.6.2",
+    "@babel/core": "^7.21.4",
+    "@tarojs/cli": "3.6.4",
+    "@tarojs/mini-runner": "3.6.4",
+    "@tarojs/webpack-runner": "3.6.4",
+    "@tarojs/webpack5-runner": "3.6.4",
     "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vue/babel-preset-jsx": "^1.2.4",
     "autoprefixer": "^10.4.14",
-    "babel-preset-taro": "3.6.2",
+    "babel-preset-taro": "3.6.4",
     "cross-env": "^7.0.3",
     "css-loader": "6.7.3",
-    "eslint": "^8.36.0",
-    "eslint-config-taro": "3.6.2",
-    "eslint-plugin-vue": "^9.9.0",
+    "eslint": "^8.37.0",
+    "eslint-config-taro": "3.6.4",
+    "eslint-plugin-vue": "^9.10.0",
     "postcss": "^8.4.21",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
     "style-loader": "3.3.2",
-    "stylelint": "^15.2.0",
+    "stylelint": "^15.4.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.2",
-    "webpack": "^5.76.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.3",
+    "webpack": "^5.77.0"
   }
 }
