--- a/demo/taro-vue3-app/project.config.json
+++ b/demo/taro-vue3-app/project.config.json
@@ -39,7 +39,8 @@
     "showES6CompileOption": false,
     "useCompilerPlugins": false,
     "minifyWXML": true,
-    "useStaticServer": true
+    "useStaticServer": true,
+    "condition": false
   },
   "compileType": "miniprogram",
   "libVersion": "2.24.4",
