--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -49,30 +49,31 @@
     "test:mp-baidu": "cross-env UNI_PLATFORM=mp-baidu jest -i",
     "test:mp-weixin": "cross-env UNI_PLATFORM=mp-weixin jest -i",
     "open:dev": "weapp open -p dist/dev/mp-weixin",
-    "open:build": "weapp open -p dist/build/mp-weixin"
+    "open:build": "weapp open -p dist/build/mp-weixin",
+    "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-app-plus": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-h5": "2.0.2-alpha-3070620230227001",
+    "@dcloudio/uni-app": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-app-plus": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-h5": "2.0.2-alpha-3071220230331001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-360": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-stat": "2.0.2-alpha-3070620230227001",
-    "@vue/shared": "^3.2.47",
+    "@dcloudio/uni-i18n": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-360": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-stat": "2.0.2-alpha-3071220230331001",
+    "@vue/shared": "^3.0.0",
     "core-js": "^3.29.1",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.13.11",
@@ -85,22 +86,22 @@
     "@babel/plugin-syntax-typescript": "^7.2.0",
     "@babel/runtime": "~7.21.0",
     "@dcloudio/types": "^3.2.11",
-    "@dcloudio/uni-automator": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-migration": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3070620230227001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3070620230227001",
+    "@dcloudio/uni-automator": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-migration": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3071220230331001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3071220230331001",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "babel-plugin-import": "^1.13.6",
+    "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "jest": "^29.5.0",
+    "jest": "^25.4.0",
     "mini-css-extract-plugin": "^2.7.3",
     "mini-types": "*",
     "miniprogram-api-typings": "3.9.0",
@@ -110,13 +111,13 @@
     "sass": "^1.59.2",
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.2"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.3"
   },
   "browserslist": [
     "Android >= 4.4",
