--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -82,23 +82,26 @@
     "registry": "https://registry.npmjs.org"
   },
   "keywords": [
-    "weapp",
     "tailwindcss",
+    "weapp",
+    "wechat",
     "mini",
     "miniprogram",
+    "mini app",
+    "weapp-tw",
+    "weapp-tailwindcss",
     "taro",
     "uni-app",
     "remax",
     "rax",
+    "mpx",
     "jit",
-    "vite",
-    "postcss",
-    "tailwindcss jit",
     "mp",
-    "weapp-tailwindcss",
     "android",
     "ios",
     "小程序",
+    "vite",
+    "postcss",
     "webpack",
     "webpack-plugin"
   ],
