--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -41,7 +41,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.0.3"
+    "weapp-tailwindcss-webpack-plugin": "^2.0.4-beta.0"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
