--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -78,7 +78,7 @@
     "typescript": "~4.9.5",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.0-beta.1",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.0",
     "webpack": "^5.77.0"
   },
   "engines": {
