--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "@icebreakers/eslint-config-ts": "^1.0.4",
+    "@types/gulp": "^4.0.10",
     "autoprefixer": "^10.4.14",
     "del": "^6.1.1",
     "eslint": "^8.38.0",
