--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -63,11 +63,12 @@
     "sass-loader": "^13.2.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-patch": "^1.1.0-rc.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.9.5",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.3",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.3-beta.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-sources": "^3.2.3"
