--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -76,12 +76,13 @@
     "stylelint": "15.6.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-patch": "^1.1.0-rc.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "terser-webpack-plugin": "^5.3.7",
     "typescript": "~5.0.4",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.3",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.3-beta.0",
     "webpack": "^5.81.0"
   },
   "engines": {
