--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -84,12 +84,13 @@
     "stylelint": "^15.5.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-patch": "^1.1.0-rc.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.0.4",
     "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.3",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.3-beta.0",
     "webpack": "^5.79.0"
   }
 }
