--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -78,6 +78,7 @@
     "sass": "^1.59.3",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-patch": "^1.1.0-rc.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.9.5",
     "unocss": "^0.50.5",
@@ -85,7 +86,7 @@
     "vite-plugin-windicss": "^1.8.10",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.3",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.3-beta.0",
     "windicss": "^3.5.6"
   }
 }
