test: add utf-8 case allow utf-8 selector

--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/babel__generator": "^7.6.4",
     "@types/babel__traverse": "^7.18.5",
+    "@types/cssesc": "^3.0.0",
     "@types/esm": "^3.2.0",
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.5.1",
@@ -152,6 +153,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "css-loader3": "npm:css-loader@3.6.0",
+    "cssesc": "^3.0.0",
     "defu": "6.1.2",
     "del": "^6.1.1",
     "eslint": "8.39.0",
