--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -39,19 +39,19 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-3070920230324001",
-    "@dcloudio/uni-app-plus": "3.0.0-3070920230324001",
-    "@dcloudio/uni-components": "3.0.0-3070920230324001",
-    "@dcloudio/uni-h5": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-jd": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-lark": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-qq": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-3070920230324001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3070920230324001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-3070920230324001",
+    "@dcloudio/uni-app": "3.0.0-3071120230427001",
+    "@dcloudio/uni-app-plus": "3.0.0-3071120230427001",
+    "@dcloudio/uni-components": "3.0.0-3071120230427001",
+    "@dcloudio/uni-h5": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-jd": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-lark": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-qq": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3071120230427001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3071120230427001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3071120230427001",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.7",
     "eventemitter3": "^4.0.7",
@@ -65,10 +65,10 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.3.2",
-    "@dcloudio/uni-automator": "3.0.0-3070920230324001",
-    "@dcloudio/uni-cli-shared": "3.0.0-3070920230324001",
-    "@dcloudio/uni-stacktracey": "3.0.0-3070920230324001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-3070920230324001",
+    "@dcloudio/uni-automator": "3.0.0-3071120230427001",
+    "@dcloudio/uni-cli-shared": "3.0.0-3071120230427001",
+    "@dcloudio/uni-stacktracey": "3.0.0-3071120230427001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3071120230427001",
     "autoprefixer": "^10.4.14",
     "miniprogram-api-typings": "^3.9.0",
     "postcss": "^8.4.21",
@@ -86,7 +86,7 @@
     "vite-plugin-windicss": "^1.8.10",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.5",
+    "weapp-tailwindcss-webpack-plugin": "^2.2.0-beta.0",
     "windicss": "^3.5.6"
   }
 }
