--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "npm run dev:h5",
     "dev": "npm run dev:mp-weixin",
-    "build": "npm run build:mp-weixin",
+    "build": "echo uni-app skip",
+    "_build": "npm run build:mp-weixin",
     "build:local": "cross-env LOCAL=1 npm run build:mp-weixin",
     "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
     "build:custom": "cross-env NODE_ENV=production uniapp-cli custom",
@@ -119,7 +120,7 @@
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.5"
+    "weapp-tailwindcss-webpack-plugin": "^2.2.0-beta.0"
   },
   "browserslist": [
     "Android >= 4.4",
