test(esm): use vitest for esm test

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
     "fix-dts": "ts-node scripts/fix-dts.ts",
-    "test": "jest",
+    "test": "jest && vitest run",
+    "vitest:test": "vitest",
+    "vitest:coverage": "vitest run --coverage",
     "test:all": "cross-env JEST_INVALID_SKIP_CASES=1 jest",
     "init:rename": "node scripts/init/rename.js",
     "clean": "node scripts/clean.js",
@@ -146,6 +148,7 @@
     "@types/webpack": "^5.28.1",
     "@types/webpack-sources": "^3.2.0",
     "@types/webpack4": "npm:@types/webpack@4",
+    "@vitest/coverage-c8": "^0.31.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.5",
     "chalk": "4.1.2",
@@ -197,6 +200,7 @@
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
     "vite": "^4.3.5",
+    "vitest": "^0.31.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.82.0"
   },
