--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,4 +43,4 @@ jobs:
 
       - uses: codecov/codecov-action@v3
         with:
-          directory: coverage
+          files: ./coverage/clover.xml,./coverage-vitest/clover.xml
