feat(mangle): use tailwindcss-mangle-shared instead of core

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
     "prepare": "ts-patch install -s & tw-patch",
+    "release": "bumpp",
     "-------": "-----------",
     "postinstall": "node bin/weapp-tailwindcss.js patch"
   },
@@ -125,11 +126,11 @@
     "@icebreakers/eslint-config-ts": "^1.0.4",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.1",
-    "@rollup/plugin-typescript": "^11.1.0",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@tsconfig/recommended": "^1.0.2",
     "@types/babel__generator": "^7.6.4",
     "@types/babel__traverse": "^7.18.5",
@@ -144,7 +145,7 @@
     "@types/micromatch": "^4.0.2",
     "@types/node": "^18.16.3",
     "@types/object-hash": "^3.0.2",
-    "@types/semver": "^7.3.13",
+    "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
     "@types/webpack-sources": "^3.2.0",
@@ -152,6 +153,7 @@
     "@vitest/coverage-c8": "^0.31.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.5",
+    "bumpp": "^9.1.0",
     "chalk": "4.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
@@ -184,7 +186,7 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.21.5",
+    "rollup": "^3.21.7",
     "rollup-plugin-visualizer": "^5.9.0",
     "simple-functional-loader": "^1.2.1",
     "style-loader": "^3.3.2",
@@ -200,10 +202,10 @@
     "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
-    "vite": "^4.3.5",
+    "vite": "^4.3.6",
     "vitest": "^0.31.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.82.0"
+    "webpack": "^5.82.1"
   },
   "dependencies": {
     "@babel/generator": "^7.21.4",
@@ -214,9 +216,9 @@
     "loader-utils": "^2.0.2",
     "micromatch": "^4.0.5",
     "postcss": "8.4.23",
-    "postcss-selector-parser": "^6.0.12",
-    "semver": "^7.5.0",
-    "tailwindcss-mangle-core": "^1.0.1",
+    "postcss-selector-parser": "^6.0.13",
+    "semver": "^7.5.1",
+    "tailwindcss-mangle-shared": "^1.2.1",
     "tailwindcss-patch": "^1.1.1",
     "webpack-sources": "^3.2.3"
   }
