--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -1,8 +1,12 @@
 {
   "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "declaration": true,
-    "declarationDir": "types"
+    "declaration": true
   },
-  "exclude": ["dist", "node_modules", "test/types", "./*.d.ts"]
+  "exclude": [
+    "dist",
+    "node_modules",
+    "test/types",
+    "./*.d.ts"
+  ]
 }
