--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@types/babel__generator": "^7.6.4",
     "@types/babel__traverse": "^7.18.5",
     "@types/cssesc": "^3.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/fs-extra": "^11.0.1",
     "@types/gulp": "^4.0.10",
     "@types/gulp-postcss": "^8.0.3",
@@ -150,6 +151,7 @@
     "@types/lodash": "^4.14.194",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^20.1.5",
+    "@types/react": "^18.2.6",
     "@types/semver": "^7.5.0",
     "@types/vinyl": "^2.0.7",
     "@types/webpack": "^5.28.1",
@@ -207,6 +209,7 @@
     "@babel/traverse": "^7.21.4",
     "@babel/types": "^7.21.4",
     "@csstools/postcss-is-pseudo-class": "^3.2.0",
+    "file-saver": "^2.0.5",
     "micromatch": "^4.0.5",
     "postcss": "8.4.23",
     "postcss-selector-parser": "^6.0.13",
