--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "npm run dev:h5",
     "dev": "npm run dev:mp-weixin",
-    "build": "echo uni-app skip",
-    "_build": "npm run build:mp-weixin",
+    "build": "npm run build:mp-weixin",
     "build:local": "cross-env LOCAL=1 npm run build:mp-weixin",
     "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
     "build:custom": "cross-env NODE_ENV=production uniapp-cli custom",
@@ -55,7 +54,7 @@
     "@dcloudio/uni-app": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-app-plus": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-h5": "2.0.2-alpha-3080120230428001",
-    "@dcloudio/uni-helper-json": "*",
+    "@dcloudio/uni-helper-json": "^1.0.13",
     "@dcloudio/uni-i18n": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-mp-360": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3080120230428001",
@@ -75,7 +74,6 @@
     "@vant/weapp": "^1.10.18",
     "@vue/shared": "^3.3.3",
     "core-js": "^3.30.2",
-    "flyio": "^0.6.2",
     "regenerator-runtime": "^0.13.11",
     "uview-ui": "2.0.36",
     "vue": "^2.6.11",
@@ -102,7 +100,7 @@
     "babel-plugin-import": "^1.13.6",
     "cross-env": "^7.0.2",
     "jest": "^29.5.0",
-    "mini-types": "*",
+    "mini-types": "^0.1.7",
     "miniprogram-api-typings": "3.9.1",
     "postcss": "8.4.23",
     "postcss-comment": "^2.0.0",
