--- a/demo/package.json
+++ b/demo/package.json
@@ -36,5 +36,9 @@
   "_devDependencies": {
     "turbo": "^1.3.3"
   },
-  "scripts": {}
+  "scripts": {
+    "upup": "pnpm -r up -Li",
+    "build": "pnpm -r run build",
+    "dev": "pnpm -r run dev"
+  }
 }
