--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -56,7 +56,7 @@
     "@dcloudio/uni-app": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-app-plus": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-h5": "2.0.2-alpha-3080120230428001",
-    "@dcloudio/uni-helper-json": "*",
+    "@dcloudio/uni-helper-json": "^1.0.13",
     "@dcloudio/uni-i18n": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-mp-360": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3080120230428001",
@@ -75,11 +75,8 @@
     "@dcloudio/uni-stat": "2.0.2-alpha-3080120230428001",
     "@vue/shared": "^3.0.0",
     "core-js": "^3.29.1",
-    "flyio": "^0.6.2",
     "regenerator-runtime": "^0.13.11",
     "vue": ">= 2.6.14 < 2.7",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^8.0.0",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
@@ -101,10 +98,10 @@
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.3",
-    "mini-types": "*",
-    "miniprogram-api-typings": "3.9.0",
+    "mini-types": "^0.1.7",
+    "miniprogram-api-typings": "3.9.1",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
