chore(demos): error dump all time

--- a/demo/.npmrc
+++ b/demo/.npmrc
@@ -1,3 +1,7 @@
+# hoist=false
 shamefully-hoist=true
-hoist-pattern[]=!@dcloudio*
-hoist-pattern[]=!*vue*
+hoist-pattern[]=!"**/@dcloudio/**"
+hoist-pattern[]=!"**/*vue*/**"
+# hoist-pattern[]=!@tarojs*
+public-hoist-pattern[]=!"**/@dcloudio/**"
+public-hoist-pattern[]=!"**/*vue*/**"
