--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -42,55 +42,54 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.21.5",
-    "@tarojs/components": "3.6.5",
-    "@tarojs/helper": "3.6.5",
-    "@tarojs/plugin-framework-vue2": "3.6.5",
-    "@tarojs/plugin-platform-alipay": "3.6.5",
-    "@tarojs/plugin-platform-jd": "3.6.5",
-    "@tarojs/plugin-platform-qq": "3.6.5",
-    "@tarojs/plugin-platform-swan": "3.6.5",
-    "@tarojs/plugin-platform-tt": "3.6.5",
-    "@tarojs/plugin-platform-weapp": "3.6.5",
-    "@tarojs/router": "3.6.5",
-    "@tarojs/runtime": "3.6.5",
-    "@tarojs/shared": "3.6.5",
-    "@tarojs/taro": "3.6.5",
-    "@tarojs/taro-h5": "3.6.5",
+    "@babel/runtime": "^7.7.7",
+    "@tarojs/components": "3.6.6",
+    "@tarojs/helper": "3.6.6",
+    "@tarojs/plugin-framework-vue2": "3.6.6",
+    "@tarojs/plugin-platform-alipay": "3.6.6",
+    "@tarojs/plugin-platform-h5": "3.6.6",
+    "@tarojs/plugin-platform-jd": "3.6.6",
+    "@tarojs/plugin-platform-qq": "3.6.6",
+    "@tarojs/plugin-platform-swan": "3.6.6",
+    "@tarojs/plugin-platform-tt": "3.6.6",
+    "@tarojs/plugin-platform-weapp": "3.6.6",
+    "@tarojs/runtime": "3.6.6",
+    "@tarojs/shared": "3.6.6",
+    "@tarojs/taro": "3.6.6",
     "vue": "~2.6.14",
     "vue-template-compiler": "~2.6.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@tarojs/cli": "3.6.5",
-    "@tarojs/mini-runner": "3.6.5",
-    "@tarojs/webpack-runner": "3.6.5",
-    "@tarojs/webpack5-runner": "3.6.5",
-    "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "@vue/babel-preset-jsx": "^1.4.0",
-    "autoprefixer": "^10.4.14",
-    "babel-preset-taro": "3.6.5",
-    "cross-env": "^7.0.3",
-    "css-loader": "6.7.3",
-    "eslint": "^8.40.0",
-    "eslint-config-taro": "3.6.5",
+    "@babel/core": "^7.8.0",
+    "@tarojs/cli": "3.6.6",
+    "@tarojs/webpack5-runner": "3.6.6",
+    "@types/node": "^20.2.0",
+    "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@vue/babel-preset-jsx": "^1.2.4",
+    "babel-preset-taro": "3.6.6",
+    "css-loader": "3.4.2",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "3.6.6",
     "eslint-plugin-vue": "^9.13.0",
-    "postcss": "^8.4.22",
+    "postcss": "^8.4.18",
+    "style-loader": "1.3.0",
+    "stylelint": "^15.6.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.1.0",
+    "vue-loader": "^15.9.2",
+    "webpack": "5.83.1",
+    "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "style-loader": "3.3.2",
-    "stylelint": "^15.6.2",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.1",
     "tailwindcss-patch": "^1.2.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~4.9.5",
-    "vue-loader": "^15.9.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.3.3",
-    "webpack": "^5.83.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.3.3"
   }
 }
