chore: update npmrc

--- a/demo/.npmrc
+++ b/demo/.npmrc
@@ -1,7 +1,9 @@
 # hoist=false
-shamefully-hoist=true
-hoist-pattern[]=!"**/@dcloudio/**"
-hoist-pattern[]=!"**/*vue*/**"
+# shamefully-hoist=true
+# hoist-pattern[]=!"**/@dcloudio/**"
+# hoist-pattern[]=!"**/*vue*/**"
 # hoist-pattern[]=!@tarojs*
-public-hoist-pattern[]=!"**/@dcloudio/**"
+public-hoist-pattern[]=!"@dcloudio/*"
 public-hoist-pattern[]=!"**/*vue*/**"
+public-hoist-pattern[]=!"@tarojs/*"
+public-hoist-pattern[]="*"
